--- a/RegistroArticulo/RegistroArticulo.csproj
+++ b/RegistroArticulo/RegistroArticulo.csproj
@@ -50,6 +50,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="DAL\Contexto.cs" />
     <Compile Include="Entidades\Articulos.cs" />
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
